2006-06-07  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (set_defaults): Don't dereference undefined value.
	(process_stdin): Handle dashes in tag names.

	* log_accum.pl (main): Fix branch filter.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

2006-06-05  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Restore #! @PERL@ -T line.  Print warm fuzzies.

2006-05-23  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Remove old FIXME.  Improve commenting.
	(append_to_file): Rename to...
	(append_files_to_file): ...this.

2006-05-22  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (mail_separate_diffs): Don't use RCS Id key in example.

	* log_accum.pl (main): Drop unnecessary parentheses.

	* log_accum.pl (set_defaults): Clone --mail-to for empty
	--separate-diffs.
	(%option_spec): Make --separate-diffs accept an optional list of
	strings.
	(main): Pass separate-diffs emails to mail_separate_diffs.

	* log_accum.pl (mail_separate_diffs): Include the last diff.
	(Original patch from Sylvain Beucler <beuc@beuc.net>.)

2006-05-17  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (write_file, append_file): Don't write empty lists.
	(read_logfile): Return undef rather than empty list.  Add debug print.
	(build_diff): Add debug prints and assertion.

2006-05-15  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (set_defaults): Set diff defaults.
	(mail_separate_diffs, build_diffs): New functions.
	(get_temp_files): Add olf/new revision number storage.
	(get_topdir): New function factored from...
	(compile_subject): ...here.
	(urlencode): Don't write input values directly.
	(build_message_body): Build and return diff text as needed.

2006-05-14  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Simplify and fix ViewCVS URLs.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

	* log_accum.pl (parse_config): Add header comment block.
	(process_argv): Remove TODO asterisks in header comment block.
	(build_message_body): Don't require $config.